Fixed Alignement issues with header

--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ header,ul{
     display: flex;
     /* This allows  us to align the header and its childs as intended */
 }
+nav{
+    min-width: 400px
+}
+ul{
+    justify-content: space-evenly;
+    gap: 6px;
+}
 li,a{
     text-decoration: none;
     list-style-type: none
@@ -26,6 +33,7 @@ li,a{
 }
 
 header{
+    margin-bottom: auto;
     justify-content: flex-end;
     /* Aligns header to right */
     margin-top: 10px;
@@ -48,7 +56,7 @@ h1{
     font-weight: bolder;
     color: #F9FAF8;
 }
-li,a{
+li,a,p{
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -58,7 +66,47 @@ li,a{
     flex-direction: column;
     /* MADE A FLEX SO THAT WE CAN ALIGN HORZ */
     align-items: center;
+    min-width: 1000px;
 }
 .section3{
     background-color: #E5E7EB;
 }
+
+.row{
+    display: flex;
+    flex: 1;
+}
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1000px;
+}
+.hero-right,.hero-left{
+    flex: 1;
+}
+
+img{
+    max-width: 350px;
+    border-radius: 10px;
+    box-shadow: 10px white;
+}
+ .hero-right{
+    display: flex;
+    justify-content: flex-end;
+ }
+ .hero-left{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+ }
+ .cta-btn{
+    background-color: #3882F6;
+    color: white;
+    max-width:max-content;
+    padding: 14px 30px;
+    border-radius: 10px;
+ }
+ h2{
+    margin-top: auto;
+ }
